--- a/templates/listings/listings.html
+++ b/templates/listings/listings.html
@@ -2,6 +2,9 @@
 
 {% load humanize %}
 
+{% block title %} | Browse Listings
+{% endblock title %}
+
 {% block content %}
 <section id="showcase-inner" class="py-5 text-white">
     <div class="container">
@@ -38,15 +41,21 @@
           {% for listing in listings %}
               <div class="col-md-6 col-lg-4 mb-4">
               <div class="card listing-preview">
-                <img class="card-img-top" src="{{listing.photo_main.url}}" alt="">
+
+                <img class="card-img-top"   src="{{listing.photo_main.url}}" alt="">
+
                 <div class="card-img-overlay">
                   <h2>
                     <span class="badge badge-secondary text-white">$ {{listing.price | intcomma }} </span>
                   </h2>
+
                 </div>
                 <div class="card-body">
                   <div class="listing-heading text-center">
-                    <h4 class="text-primary">{{listing.title}}</h4>
+                  <a  href="{% url 'listing' listing.id %} "> 
+
+                    <h4 class="text-primary" >{{listing.title}}</h4>
+                  </a>
                     <p>
                       <i class="fas fa-map-marker text-secondary"></i> {{listing.city}}
                       {{listing.state}} {{listing.zipcode}}
