--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -2,6 +2,9 @@
 
 {%load static %}
 
+{% block title %} | About
+{% endblock title %}
+
 {% block content %}
 
 <section id="showcase-inner" class="py-5 text-white">
